fixed variable in spacing-wrap mixin

--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -4,7 +4,7 @@
  */
 @mixin spacing-wrap($spacing: $spacing-m) {
   > * + * {
-    margin-top: $spacing-m;
+    margin-top: $spacing;
   }
 }
 
